fixed wrong line breaks inside env and bindings

--- a/lambda/src/styles/fiori-fundamentals-overrides.scss
+++ b/lambda/src/styles/fiori-fundamentals-overrides.scss
@@ -51,11 +51,13 @@ span {
   }
 }
 
-
-
 //helpers
-.word-wrap {
+.y-word-wrap {
   word-wrap: break-word;
+}
+
+.y-word-break {
+  word-break: break-all;
 }
 
 
